discussion/kv_engine/128254/128254_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch 'couchbase/mad-hatter' into 'couchbase/master'

* commit '1a98df22':
  MB-38845: Handle as flush-failure all KVStore::commit failure codes

Note: This merge also introduces the original CouchKVStore changes to
MagmaKVStore

Change-Id: I57d639b55fd598f83669fda04e2629bd10f3d1d1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2020-05-16 07:19:07.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-16 07:53:10.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2225/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/atomic.h:158:40: error: member access into incomplete type "Item" [clang-diagnostic-error]
        if (value != nullptr && --value->_rc_refcount == 0) {
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/persistence_callback.h:63:19: note: in instantiation of member function "SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >::~SingleThreadedRCPtr" requested here
        cb(*this, item, mutationStatus);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/diskdockey.h:23:7: note: forward declaration of "Item"
class Item;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/atomic.h:240:18: error: member access into incomplete type "Item" [clang-diagnostic-error]
            value->_rc_refcount++;
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/atomic.h:139:23: note: in instantiation of member function "SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >::gimme" requested here
        : value(other.gimme()) {
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/persistence_callback.h:63:19: note: in instantiation of member function "SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >::SingleThreadedRCPtr" requested here
        cb(*this, item, mutationStatus);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/diskdockey.h:23:7: note: forward declaration of "Item"
class Item;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2225/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/atomic.h:158:40:
error: member access into incomplete type "Item" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2225/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2756/ : FAILURE

Failure of a CTest test [2020-05-16T07:26:53.673Z]  46/401 Test #274: ep_testsuite_xdcr.value_eviction.magma ............................................................................ ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2756/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28105/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/741/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24062/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3662/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3749/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3686/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11535/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-16 09:20:45.000000000
Message: 
Patch Set 2:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2225/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/atomic.h:158:40: error: member access into incomplete type "Item" [clang-diagnostic-error]
        if (value != nullptr && --value->_rc_refcount == 0) {
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/persistence_callback.h:63:19: note: in instantiation of member function "SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >::~SingleThreadedRCPtr" requested here
        cb(*this, item, mutationStatus);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/diskdockey.h:23:7: note: forward declaration of "Item"
class Item;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/atomic.h:240:18: error: member access into incomplete type "Item" [clang-diagnostic-error]
            value->_rc_refcount++;
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/atomic.h:139:23: note: in instantiation of member function "SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >::gimme" requested here
        : value(other.gimme()) {
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/persistence_callback.h:63:19: note: in instantiation of member function "SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >::SingleThreadedRCPtr" requested here
        cb(*this, item, mutationStatus);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/diskdockey.h:23:7: note: forward declaration of "Item"
class Item;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2225/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/atomic.h:158:40:
error: member access into incomplete type "Item" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2225/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28105/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/741/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24062/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3662/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3749/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3686/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11535/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2757/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
